gen/SmartHomeStateMachineParser.py
# Generated from /home/erfan/code/compiler/final-project/SmartHomeDSL/SmartHomeStateMachine.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SmartHomeStateMachineParser ( Parser ):

    grammarFileName = "SmartHomeStateMachine.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'LED'", "'BUTTON'", "'SENSOR'", "'RELAY'", 
                     "'SERVO'", "'LCD'", "'BUZZER'", "'TEMPERATURE_SENSOR'", 
                     "'HUMIDITY_SENSOR'", "'MOTION_SENSOR'", "'LIGHT_SENSOR'", 
                     "'ULTRASONIC_SENSOR'", "'RGB_LED'", "'STEPPER_MOTOR'", 
                     "'PWM_OUTPUT'", "'DIGITAL_INPUT'", "'DIGITAL_OUTPUT'", 
                     "'ANALOG_INPUT'", "'ANALOG_OUTPUT'", "'POTENTIOMETER'", 
                     "'DISPLAY'", "'on'", "'off'", "'toggle'", "'set'", 
                     "'write'", "'move'", "'display'", "'beep'", "'fade'", 
                     "'blink'", "'setColor'", "'setBrightness'", "'read'", 
                     "'getDistance'", "'getTemperature'", "'getHumidity'", 
                     "'isPressed'", "'isMotionDetected'", "'getLight'", 
                     "'device'", "'state'", "'transition'", "'when'", "'pin'", 
                     "'address'", "'delay'", "'='", "'->'", "'.'", "';'", 
                     "','", "'('", "')'", "'{'", "'}'", "':'", "'&&'", "'||'", 
                     "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DEVICE", "STATE", "TRANSITION", "WHEN", 
                      "PIN", "ADDRESS", "DELAY", "ASSIGN", "ARROW", "DOT", 
                      "SEMICOLON", "COMMA", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "COLON", "AND", "OR", "NOT", "EQ", "NE", 
                      "LT", "GT", "LE", "GE", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "MODULO", "NUMBER", "STRING", "BOOLEAN", 
                      "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_deviceDeclaration = 1
    RULE_deviceName = 2
    RULE_pinDeclaration = 3
    RULE_deviceType = 4
    RULE_stateDeclaration = 5
    RULE_stateName = 6
    RULE_action = 7
    RULE_deviceAction = 8
    RULE_actionMethod = 9
    RULE_getterMethod = 10
    RULE_delayAction = 11
    RULE_delayParameter = 12
    RULE_variableAssignment = 13
    RULE_variableName = 14
    RULE_transitionDeclaration = 15
    RULE_allStates = 16
    RULE_condition = 17
    RULE_expression = 18
    RULE_andExpression = 19
    RULE_comparisonExpression = 20
    RULE_arithmeticExpression = 21
    RULE_term = 22
    RULE_factor = 23
    RULE_deviceCall = 24

    ruleNames =  [ "program", "deviceDeclaration", "deviceName", "pinDeclaration", 
                   "deviceType", "stateDeclaration", "stateName", "action", 
                   "deviceAction", "actionMethod", "getterMethod", "delayAction", 
                   "delayParameter", "variableAssignment", "variableName", 
                   "transitionDeclaration", "allStates", "condition", "expression", 
                   "andExpression", "comparisonExpression", "arithmeticExpression", 
                   "term", "factor", "deviceCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    DEVICE=41
    STATE=42
    TRANSITION=43
    WHEN=44
    PIN=45
    ADDRESS=46
    DELAY=47
    ASSIGN=48
    ARROW=49
    DOT=50
    SEMICOLON=51
    COMMA=52
    LPAREN=53
    RPAREN=54
    LBRACE=55
    RBRACE=56
    COLON=57
    AND=58
    OR=59
    NOT=60
    EQ=61
    NE=62
    LT=63
    GT=64
    LE=65
    GE=66
    PLUS=67
    MINUS=68
    MULTIPLY=69
    DIVIDE=70
    MODULO=71
    NUMBER=72
    STRING=73
    BOOLEAN=74
    IDENTIFIER=75
    WS=76
    LINE_COMMENT=77
    BLOCK_COMMENT=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SmartHomeStateMachineParser.EOF, 0)

        def deviceDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmartHomeStateMachineParser.DeviceDeclarationContext)
            else:
                return self.getTypedRuleContext(SmartHomeStateMachineParser.DeviceDeclarationContext,i)


        def stateDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmartHomeStateMachineParser.StateDeclarationContext)
            else:
                return self.getTypedRuleContext(SmartHomeStateMachineParser.StateDeclarationContext,i)


        def transitionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmartHomeStateMachineParser.TransitionDeclarationContext)
            else:
                return self.getTypedRuleContext(SmartHomeStateMachineParser.TransitionDeclarationContext,i)


        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SmartHomeStateMachineParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 15393162788864) != 0):
                self.state = 53
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [41]:
                    self.state = 50
                    self.deviceDeclaration()
                    pass
                elif token in [42]:
                    self.state = 51
                    self.stateDeclaration()
                    pass
                elif token in [43]:
                    self.state = 52
                    self.transitionDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(SmartHomeStateMachineParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEVICE(self):
            return self.getToken(SmartHomeStateMachineParser.DEVICE, 0)

        def deviceName(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.DeviceNameContext,0)


        def COLON(self):
            return self.getToken(SmartHomeStateMachineParser.COLON, 0)

        def deviceType(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.DeviceTypeContext,0)


        def SEMICOLON(self):
            return self.getToken(SmartHomeStateMachineParser.SEMICOLON, 0)

        def PIN(self):
            return self.getToken(SmartHomeStateMachineParser.PIN, 0)

        def pinDeclaration(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.PinDeclarationContext,0)


        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_deviceDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceDeclaration" ):
                listener.enterDeviceDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceDeclaration" ):
                listener.exitDeviceDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeviceDeclaration" ):
                return visitor.visitDeviceDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def deviceDeclaration(self):

        localctx = SmartHomeStateMachineParser.DeviceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_deviceDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(SmartHomeStateMachineParser.DEVICE)
            self.state = 61
            self.deviceName()
            self.state = 62
            self.match(SmartHomeStateMachineParser.COLON)
            self.state = 63
            self.deviceType()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 64
                self.match(SmartHomeStateMachineParser.PIN)
                self.state = 65
                self.pinDeclaration()


            self.state = 68
            self.match(SmartHomeStateMachineParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SmartHomeStateMachineParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_deviceName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceName" ):
                listener.enterDeviceName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceName" ):
                listener.exitDeviceName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeviceName" ):
                return visitor.visitDeviceName(self)
            else:
                return visitor.visitChildren(self)




    def deviceName(self):

        localctx = SmartHomeStateMachineParser.DeviceNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_deviceName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(SmartHomeStateMachineParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PinDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(SmartHomeStateMachineParser.NUMBER, 0)

        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_pinDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPinDeclaration" ):
                listener.enterPinDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPinDeclaration" ):
                listener.exitPinDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPinDeclaration" ):
                return visitor.visitPinDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def pinDeclaration(self):

        localctx = SmartHomeStateMachineParser.PinDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pinDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(SmartHomeStateMachineParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_deviceType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceType" ):
                listener.enterDeviceType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceType" ):
                listener.exitDeviceType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeviceType" ):
                return visitor.visitDeviceType(self)
            else:
                return visitor.visitChildren(self)




    def deviceType(self):

        localctx = SmartHomeStateMachineParser.DeviceTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_deviceType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4194302) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATE(self):
            return self.getToken(SmartHomeStateMachineParser.STATE, 0)

        def stateName(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.StateNameContext,0)


        def LBRACE(self):
            return self.getToken(SmartHomeStateMachineParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SmartHomeStateMachineParser.RBRACE, 0)

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmartHomeStateMachineParser.ActionContext)
            else:
                return self.getTypedRuleContext(SmartHomeStateMachineParser.ActionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SmartHomeStateMachineParser.COMMA)
            else:
                return self.getToken(SmartHomeStateMachineParser.COMMA, i)

        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_stateDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateDeclaration" ):
                listener.enterStateDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateDeclaration" ):
                listener.exitStateDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateDeclaration" ):
                return visitor.visitStateDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def stateDeclaration(self):

        localctx = SmartHomeStateMachineParser.StateDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stateDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SmartHomeStateMachineParser.STATE)
            self.state = 77
            self.stateName()
            self.state = 78
            self.match(SmartHomeStateMachineParser.LBRACE)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47 or _la==75:
                self.state = 79
                self.action()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==52:
                    self.state = 80
                    self.match(SmartHomeStateMachineParser.COMMA)
                    self.state = 81
                    self.action()
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 89
            self.match(SmartHomeStateMachineParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SmartHomeStateMachineParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_stateName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateName" ):
                listener.enterStateName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateName" ):
                listener.exitStateName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateName" ):
                return visitor.visitStateName(self)
            else:
                return visitor.visitChildren(self)




    def stateName(self):

        localctx = SmartHomeStateMachineParser.StateNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stateName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SmartHomeStateMachineParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deviceAction(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.DeviceActionContext,0)


        def delayAction(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.DelayActionContext,0)


        def variableAssignment(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.VariableAssignmentContext,0)


        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = SmartHomeStateMachineParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_action)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.deviceAction()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.delayAction()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.variableAssignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deviceName(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.DeviceNameContext,0)


        def DOT(self):
            return self.getToken(SmartHomeStateMachineParser.DOT, 0)

        def actionMethod(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.ActionMethodContext,0)


        def LPAREN(self):
            return self.getToken(SmartHomeStateMachineParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SmartHomeStateMachineParser.RPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmartHomeStateMachineParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SmartHomeStateMachineParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SmartHomeStateMachineParser.COMMA)
            else:
                return self.getToken(SmartHomeStateMachineParser.COMMA, i)

        def getterMethod(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.GetterMethodContext,0)


        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_deviceAction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceAction" ):
                listener.enterDeviceAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceAction" ):
                listener.exitDeviceAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeviceAction" ):
                return visitor.visitDeviceAction(self)
            else:
                return visitor.visitChildren(self)




    def deviceAction(self):

        localctx = SmartHomeStateMachineParser.DeviceActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_deviceAction)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.deviceName()
                self.state = 99
                self.match(SmartHomeStateMachineParser.DOT)
                self.state = 100
                self.actionMethod()
                self.state = 101
                self.match(SmartHomeStateMachineParser.LPAREN)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((((_la - 53)) & ~0x3f) == 0 and ((1 << (_la - 53)) & 7864449) != 0):
                    self.state = 102
                    self.expression(0)
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==52:
                        self.state = 103
                        self.match(SmartHomeStateMachineParser.COMMA)
                        self.state = 104
                        self.expression(0)
                        self.state = 109
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 112
                self.match(SmartHomeStateMachineParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.deviceName()
                self.state = 115
                self.match(SmartHomeStateMachineParser.DOT)
                self.state = 116
                self.getterMethod()
                self.state = 117
                self.match(SmartHomeStateMachineParser.LPAREN)
                self.state = 118
                self.match(SmartHomeStateMachineParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_actionMethod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionMethod" ):
                listener.enterActionMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionMethod" ):
                listener.exitActionMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionMethod" ):
                return visitor.visitActionMethod(self)
            else:
                return visitor.visitChildren(self)




    def actionMethod(self):

        localctx = SmartHomeStateMachineParser.ActionMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_actionMethod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 17175674880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetterMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_getterMethod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetterMethod" ):
                listener.enterGetterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetterMethod" ):
                listener.exitGetterMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGetterMethod" ):
                return visitor.visitGetterMethod(self)
            else:
                return visitor.visitChildren(self)




    def getterMethod(self):

        localctx = SmartHomeStateMachineParser.GetterMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_getterMethod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2181843386368) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DelayActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELAY(self):
            return self.getToken(SmartHomeStateMachineParser.DELAY, 0)

        def LPAREN(self):
            return self.getToken(SmartHomeStateMachineParser.LPAREN, 0)

        def delayParameter(self):
            return self.getTypedRuleContext(SmartHomeStateMachineParser.DelayParameterContext,0)


        def RPAREN(self):
            return self.getToken(SmartHomeStateMachineParser.RPAREN, 0)

        def getRuleIndex(self):
            return SmartHomeStateMachineParser.RULE_delayAction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelayAction" ):
                listener.enterDelayAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelayAction" ):
                listener.exitDelayAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelayAction" ):
                return visitor.visitDelayAction(self)
            else:
                return visitor.visitChildren(self)




    def delayAction(self):
